# esp32p4-rtl-sdr

./: .gitignore  .gitmodules  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  class_driver.c  esp_libusb.c  mqttclient.c  mqttclient.h  ota_handler.c  ota_handler.h  usb_host_lib_main.c  waiter.h
